[package]
name = "bounce_matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt= "0.7"
embedded-hal = "0.2.5"
rp-pico = "0.3.0"
embedded-time = "0.12.0"
rp2040-boot2 = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
rp2040-hal = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# panic-halt= "0.2.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

